Створив styles.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Студія</title>
   </head>
   <body>
+    <!-- Section Header -->
     <header>
       <nav>
         <a href="">Web<span>Studio</span></a>
