--- a/index.html
+++ b/index.html
@@ -5,61 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+
+    <!-- Шрифти -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    
+    <!-- Кастомні стилі -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Section Header -->
-    <header>
-      <nav>
-        <a href="">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo link" href="" >Web<span class="header-logo-color">Studio</span></a>
+        <ul class="header-list list">
+          <li class="header-list-item">
+            <a class="header-link link current" href="./index.html">Студия</a>
+          </li>
+          <li class="header-list-item">
+            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-list-item">
+            <a class="header-link link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contacts list">
+        <li class="header-contact">
+          <a class="header-link-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="header-contact">
+          <a class="header-link-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
       <!-- Section Hero -->
-      <section>
-        <h1>Эффективные решения <br />для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="btn btn-hero" type="button">Заказать услугу</button>
       </section>
 
       <!-- Section SKills -->
-      <section>
-        <h2>Развинутые навыки</h2>
-        <ul>
+      <section class="skills">
+        <h2 class="section-title">Развинутые навыки</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="skills-title">Внимание к деталям</h3>
+            <p class="skills-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="skills-title">Пунктуальность</h3>
+            <p class="skills-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="skills-title">Планирование</h3>
+            <p class="skills-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="skills-title">Современные технологии</h3>
+            <p class="skills-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
 
       <!-- Section Work -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="work">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li><img src="./images/work-1.jpg" alt="work one" width="370" /></li>
           <li><img src="./images/work-2.jpg" alt="work two" width="370" /></li>
           <li><img src="./images/work-3.jpg" alt="work three" width="370" /></li>
@@ -67,9 +89,9 @@
       </section>
 
       <!-- Section Team -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./images/man-1.jpg" alt="man one" width="270" />
             <h3>Игорь Демьяненко</h3>
@@ -94,15 +116,15 @@
       </section>
     </main>
     <!-- Section Footer -->
-    <footer>
-      <a href="">Web<span>Studio</span></a>
+    <footer class="footer">
+      <a class="link" href="">Web<span>Studio</span></a>
       <address>
-        <ul>
-          <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list">
+          <li><a class="link" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    </address>
+      </address>
     </footer>
   </body>
 </html>
