--- a/portfolio.html
+++ b/portfolio.html
@@ -4,40 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студія</title>
+    <title>Портфоліо</title>
+
+    <!-- Шрифти -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    
+    <!-- Кастомні стилі -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Section Header -->
-    <header>
-      <nav>
-        <a href="">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="" >Web<span class="logo-color">Studio</span></a>
+        <ul class="header-list list">
+          <li class="header-list-item">
+            <a class="header-link link" href="./index.html">Студия</a>
+          </li>
+          <li class="header-list-item">
+            <a class="header-link link current" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-list-item">
+            <a class="header-link link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contacts list">
+        <li class="header-contact">
+          <a class="header-link-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="header-contact">
+          <a class="header-link-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
-      <h1></h1>
+      <h1>Наше портфолио</h1>
       <section>
-        <h2></h2>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб=сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button"></button></li>
-          <li><button type="button"></button></li>
+        <h2>Наши работы</h2>
+        <ul class="list">
+          <li><button class="btn btn-works-type" type="button">Все</button></li>
+          <li><button class="btn btn-works-type" type="button">Веб=сайты</button></li>
+          <li><button class="btn btn-works-type" type="button">Приложения</button></li>
+          <li><button class="btn btn-works-type" type="button">Дизайн</button></li>
+          <li><button class="btn btn-works-type" type="button">Маркетинг</button></li>
         </ul>
       </section>
       <section>
         <h2></h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="" alt="" />
             <h3></h3>
