--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Section Header -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo link" href="" >Web<span class="header-logo-color">Studio</span></a>
+        <a class="header-logo link" href="/index.html" >Web<span class="header-logo-color">Studio</span></a>
         <ul class="header-list list">
           <li class="header-list-item">
             <a class="header-link link current" href="./index.html">Студия</a>
@@ -92,37 +92,37 @@
       <section class="team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="list">
-          <li>
-            <img src="./images/man-1.jpg" alt="man one" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+          <li class="team-item">
+            <img class="person-img" src="./images/man-1.jpg" alt="man one" width="270" />
+            <h3 class="person-name">Игорь Демьяненко</h3>
+            <p class="person-position">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/man-2.jpg" alt="man two" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img class="person-img" src="./images/man-2.jpg" alt="man two" width="270" />
+            <h3 class="person-name">Ольга Репина</h3>
+            <p class="person-position">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/man-3.jpg" alt="man three" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img class="person-img" src="./images/man-3.jpg" alt="man three" width="270" />
+            <h3 class="person-name">Николай Тарасов</h3>
+            <p class="person-position">Marketing</p>
           </li>
-          <li>
-            <img src="./images/man-4.jpg" alt="man four" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img class="person-img" src="./images/man-4.jpg" alt="man four" width="270" />
+            <h3 class="person-name">Михаил Ермаков</h3>
+            <p class="person-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Section Footer -->
     <footer class="footer">
-      <a class="link" href="">Web<span>Studio</span></a>
+      <a class="link footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
       <address>
         <ul class="list">
-          <li><a class="link" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="+380961111111">+38 096 111 11 11</a></li>
+          <li><a class="footer-link link footer-place" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a class="footer-link link footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="footer-link link footer-contact" href="+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
