portfolio styles made

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Студія</title>
 
     <!-- Шрифти -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Кастомні стилі -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -18,7 +21,9 @@
     <!-- Section Header -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo link" href="/index.html" >Web<span class="header-logo-color">Studio</span></a>
+        <a class="header-logo link" href="/index.html">
+          Web<span class="header-logo-color">Studio</span>
+        </a>
         <ul class="header-list list">
           <li class="header-list-item">
             <a class="header-link link current" href="./index.html">Студия</a>
@@ -33,10 +38,14 @@
       </nav>
       <ul class="header-contacts list">
         <li class="header-contact">
-          <a class="header-link-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-link-contact link" href="mailto:info@devstudio.com">
+            info@devstudio.com
+          </a>
         </li>
         <li class="header-contact">
-          <a class="header-link-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-link-contact link" href="tel:+380961111111">
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
     </header>
@@ -117,12 +126,24 @@
     </main>
     <!-- Section Footer -->
     <footer class="footer">
-      <a class="link footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+      <a class="link footer-logo" href="./index.html">
+        Web<span class="footer-logo-color">Studio</span>
+      </a>
       <address>
         <ul class="list">
-          <li><a class="footer-link link footer-place" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a class="footer-link link footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="footer-link link footer-contact" href="+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="footer-link link footer-place" href="">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a class="footer-link link footer-contact" href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a class="footer-link link footer-contact" href="+380961111111">
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </address>
     </footer>
