--- a/portfolio.html
+++ b/portfolio.html
@@ -49,74 +49,71 @@
     </header>
 
     <main>
-      <h1>Наше портфолио</h1>
-      <section>
-        <h2>Наши работы</h2>
-        <ul class="list">
-          <li>
+      <h1 class="portfolio-title">Наше портфолио</h1>
+      <section class="porfolio">
+        <ul class="portfolio-btns list">
+          <li class="portfolio-btn">
             <button class="btn btn-works-type" type="button">Все</button>
           </li>
-          <li>
-            <button class="btn btn-works-type" type="button">Веб=сайты</button>
+          <li class="portfolio-btn">
+            <button class="btn btn-works-type" type="button">Веб-     сайты</button>
           </li>
-          <li>
+          <li class="portfolio-btn">
             <button class="btn btn-works-type" type="button">Приложения</button>
           </li>
-          <li>
+          <li class="portfolio-btn">
             <button class="btn btn-works-type" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="portfolio-btn">
             <button class="btn btn-works-type" type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <section>
-        <h2></h2>
+
         <ul class="list">
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-1.jpg" alt="work-example-1" width="370"/>
+            <h2 class="project-name">Технокряк</h2>
+            <p class="project-type">Веб-сайт</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-2.jpg" alt="work-example-2" width="370">
+            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+            <p class="project-type">Дизайн</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-3.jpg" alt="work-example-3" width="370"/>
+            <h2 class="project-name">Ресторан Seafood</h2>
+            <p class="project-type">Приложение</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-4.jpg" alt="work-example-4" width="370"/>
+            <h2 class="project-name">Проект Prime</h2>
+            <p class="project-type">Маркетинг</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-5.jpg" alt="work-example-5" width="370"/>
+            <h2 class="project-name">Проект Boxes</h2>
+            <p class="project-type">Приложение</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-6.jpg" alt="work-example-6" width="370"/>
+            <h2 class="project-name">Inspiration has no Borders</h2>
+            <p class="project-type">Веб-сайт</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-7.jpg" alt="work-example-7" width="370"/>
+            <h2 class="project-name">Издание Limited Edition</h2>
+            <p class="project-type">Дизайн</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-8.jpg" alt="work-example-8" width="370"/>
+            <h2 class="project-name">Проект LAB</h2>
+            <p class="project-type">Маркетинг</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+          <li class="project-item">
+            <img src="./images/work-example-9.jpg" alt="work-example-9" width="370"/>
+            <h2 class="project-name">Growing Business</h2>
+            <p class="project-type">Приложение</p>
           </li>
         </ul>
       </section>
