--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
         >
         <ul class="header-list list">
           <li class="header-list-item">
-            <a class="header-link link current" href="./index.html">Студия</a>
+            <a class="header-link link " href="./index.html">Студия</a>
           </li>
           <li class="header-list-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            <a class="header-link link current" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="header-list-item">
             <a class="header-link link" href="">Контакты</a>
