remake some styles in index html

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </ul>
       </nav>
       <ul class="header-contacts list">
-        <li class="header-contact">
-          <a class="header-link-contact link" href="mailto:info@devstudio.com">
+        <li class="header-contact-item">
+          <a class=" header-link header-contact link" href="mailto:info@devstudio.com">
             info@devstudio.com
           </a>
         </li>
-        <li class="header-contact">
-          <a class="header-link-contact link" href="tel:+380961111111">
+        <li class="header-contact-item">
+          <a class="header-link header-contact link" href="tel:+380961111111">
             +38 096 111 11 11
           </a>
         </li>
@@ -103,23 +103,23 @@
         <ul class="list">
           <li class="team-item">
             <img class="person-img" src="./images/man-1.jpg" alt="man one" width="270" />
-            <h3 class="person-name">Игорь Демьяненко</h3>
-            <p class="person-position">Product Designer</p>
+            <h3 class="person-name person">Игорь Демьяненко</h3>
+            <p class="person-position person">Product Designer</p>
           </li>
           <li class="team-item">
             <img class="person-img" src="./images/man-2.jpg" alt="man two" width="270" />
-            <h3 class="person-name">Ольга Репина</h3>
-            <p class="person-position">Frontend Developer</p>
+            <h3 class="person-name person">Ольга Репина</h3>
+            <p class="person-position person">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img class="person-img" src="./images/man-3.jpg" alt="man three" width="270" />
-            <h3 class="person-name">Николай Тарасов</h3>
-            <p class="person-position">Marketing</p>
+            <h3 class="person-name person">Николай Тарасов</h3>
+            <p class="person-position person">Marketing</p>
           </li>
           <li class="team-item">
             <img class="person-img" src="./images/man-4.jpg" alt="man four" width="270" />
-            <h3 class="person-name">Михаил Ермаков</h3>
-            <p class="person-position">UI Designer</p>
+            <h3 class="person-name person">Михаил Ермаков</h3>
+            <p class="person-position person">UI Designer</p>
           </li>
         </ul>
       </section>
