--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,21 @@
       </nav>
       <ul class="header-contacts list">
         <li class="header-contact">
-          <a class="header-link-contact link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a class="header-contact header-contact link" href="mailto:info@devstudio.com">
+            info@devstudio.com
+            </a>
         </li>
         <li class="header-contact">
-          <a class="header-link-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-contact header-contact link" href="tel:+380961111111">
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
     </header>
 
     <main>
-      <h1 class="portfolio-title">Наше портфолио</h1>
       <section class="porfolio">
+        <h1 class="portfolio-title">Наше портфолио</h1>
         <ul class="portfolio-btns list">
           <li class="portfolio-btn">
             <button class="btn btn-works-type" type="button">Все</button>
