remake header contacts

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,12 @@
       </nav>
       <ul class="header-contacts list">
         <li class="header-contact">
-          <a class="header-contact header-contact link" href="mailto:info@devstudio.com">
+          <a class="header-link header-contact link" href="mailto:info@devstudio.com">
             info@devstudio.com
             </a>
         </li>
         <li class="header-contact">
-          <a class="header-contact header-contact link" href="tel:+380961111111">
+          <a class="header-link header-contact link" href="tel:+380961111111">
             +38 096 111 11 11
           </a>
         </li>
